# barnaby

./: .gitignore  Cargo.toml  README.md
docs/: language_definition.md  requirements.md  troy.bnf
model/: Cargo.toml
model/src/: entity_type.rs  event.rs  lib.rs  location.rs  mod.rs  object.rs  person.rs  relations.rs
resources/: case.troy
src/: main.rs  troy.pest
src/gui/: mod.rs
src/lang_proc/: mod.rs  troy_parser.rs
src/model/: entity_type.rs  event.rs  location.rs  mod.rs  object.rs  person.rs  relations.rs  relationship.rs  repository.rs  time.rs
src/models/: entity_type.rs  event.rs  location.rs  object.rs  person.rs  relations.rs
src/parse/: mod.rs  object_qualifier.rs  person_qualifier.rs  troy_parser.rs
src/user_interface/: mod.rs
