[package]
name = "barnaby"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "barnaby"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
pest = { version = "2.8.0", features = ["pretty-print"] }
pest_derive = "2.8.0"

eframe = "0.24.1"
egui = "0.24.1"
egui_code_editor = "0.1.8"
petgraph = "0.8.3"
