[package]
name = "barnaby"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "barnaby"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
pest = { version = "2.8.6", features = ["pretty-print"] }
pest_derive = "2.8.6"

eframe = "0.33.3"
egui = "0.33.3"
egui_code_editor = "0.2.21"
petgraph = "0.8.3"
